add fields to tables by extensions

--- a/facturascripts.ini
+++ b/facturascripts.ini
@@ -1,4 +1,4 @@
-description = 'Plugin de ejemplo para FacturaScripts.'
-min_version = 2018.11
-name = 'SamplePlugin'
+description = 'Trazabilidad puntual para productos'
+min_version = 2020
+name = 'Trazabilidad'
 version = 0.1
